# telegram-chats-datastore

./: .env  README.md  pyproject.toml
src/: create_db.py  db_helper.py
src/core/: config.py
src/core/models/: __init__.py  base.py  group.py  groups_users.py  user.py
