[tool.poetry]
name = "telegram-chats-datastore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.27"}
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
